--- a/SanjaysBookStore/SanjaysBookStore.csproj
+++ b/SanjaysBookStore/SanjaysBookStore.csproj
@@ -13,6 +13,17 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.14" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SanjayBooks.Models\SanjayBooks.Models.csproj" />
+    <ProjectReference Include="..\SanjaysBooks.DataAccess\SanjaysBooks.DataAccess.csproj" />
+    <ProjectReference Include="..\SanjaysBooks.Utility\SanjaysBooks.Utility.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
