--- a/SanjaysBooks.DataAccess/SanjaysBooks.DataAccess.csproj
+++ b/SanjaysBooks.DataAccess/SanjaysBooks.DataAccess.csproj
@@ -16,4 +16,52 @@
     <ProjectReference Include="..\SanjaysBooks.Utility\SanjaysBooks.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\osx\native\libsnappy64.dylib" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\osx\native\libsnappy64.dylib" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\osx\native\libsnappy64.dylib" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\osx\native\libsnappy64.dylib" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\osx\native\libsnappy64.dylib" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\osx\native\libsnappy64.dylib" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\win\native\libzstd.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\win\native\libzstd.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\linux\native\libzstd.so" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\linux\native\libzstd.so" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\linux\native\libsnappy64.so" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="C:\Users\W0770698\.nuget\packages\mongodb.driver.core\2.15.0\build\..\runtimes\linux\native\libsnappy64.so" />
+  </ItemGroup>
+
 </Project>
