--- a/SanjaysBookStore/SanjaysBookStore.csproj
+++ b/SanjaysBookStore/SanjaysBookStore.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\SanjaysBooks.Utility\SanjaysBooks.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
