--- a/SanjaysBooks.DataAccess/SanjaysBooks.DataAccess.csproj
+++ b/SanjaysBooks.DataAccess/SanjaysBooks.DataAccess.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.14" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.15.0" />
   </ItemGroup>
